<resources>
    <string name="app_name">Facebook</string>
    <string name="usuario_nombre">Nombre del Usuario</string>
    <string name="txt_usuario">Introduzca el Nombre</string>
    <string name="usuario_password">Contraseña</string>
    <string name="txt_password">Introduzca Contraseña</string>
    <string name="btn_agregar_usuario">Usuario</string>
    <string name="btn_ver_datos">Datos</string>


</resources>